--- a/gallery.html
+++ b/gallery.html
@@ -79,6 +79,24 @@
         <div class="galleryitem">
           <img src="Images/d6.avif" alt="Gallery Image 6">
         </div>
+         <div class="galleryitem">
+          <img src="Images/a1.jpeg" alt="Gallery Image 7">
+        </div>
+         <div class="galleryitem">
+          <img src="Images/a2.webp" alt="Gallery Image 8">
+        </div>
+         <div class="galleryitem">
+          <img src="Images/a3.webp" alt="Gallery Image 9">
+        </div>
+         <div class="galleryitem">
+          <img src="https://sitecore-cd.shangri-la.com/-/media/Shangri-La/qinhuangdao_shangrila/health-leisure/spa/Spa-Treatment-Room--Ginger--_1200x700.jpg" alt="Gallery Image 10">
+        </div>
+         <div class="galleryitem">
+          <img src="https://www.fourseasons.com/alt/img-opt/~75.701.211,3317-0,0000-2577,3333-1933,0000/publish/content/dam/fourseasons/images/web/MUM/MUM_397_original.jpg" alt="Gallery Image 11">
+        </div>
+         <div class="galleryitem">
+          <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/2a/82/cf/c5/exterior-view.jpg?w=900&h=500&s=1" alt="Gallery Image 12">
+        </div>
       </div>
     </div>
   </main>
