--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
   </section>
 
   <section class="full-img">
-    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c" class="img-fluid">
+    <img src="https://www.momondo.com/rimg/himg/a2/3b/e8/ice-73846-0889970_3XL-471072.jpg?width=968&height=607&crop=true" class="img-fluid">
   </section>
   </main>
 
